feat: add header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,31 @@
     <div class="container">
 
         <header class="header frosted">
-
+            <div class="header-top">
+                <div class="header-search">
+                    <img src="./assets/icons/search.svg" alt="Search icon">
+                    <input type="search">
+                </div>
+                <div class="header-account">
+                    <img src="./assets/icons/bell-ring.svg" alt="Bell icon">
+                    <img src="./assets/icons/circle-user-round.svg" alt="User icon">
+                    <span>John Doe</span>
+                </div>
+            </div>
+            <div class="header-bottom">
+                <div class="header-greeting">
+                    <img src="./assets/icons/circle-user-round-big.svg" alt="User icon">
+                    <div class="greeting">
+                        <div>Hi there,</div>
+                        <div class="user-name">John Doe (@john)</div>
+                    </div>
+                </div>
+                <div class="header-buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
         </header>
 
         <div class="sidebar frosted">
