feat: add main section

--- a/index.html
+++ b/index.html
@@ -86,8 +86,138 @@
         </div>
 
         <main class="main">
-            <div class="card">
+            <div class="cards">
+                <h2>Your Projects</h2>
+                <div class="cards-container">
+                    <div class="card frosted">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequuntur mollitia
+                            laboriosam tenetur corrupti, accusantium temporibus ex quos natus vitae quia maxime! Quas ab
+                            ea excepturi aspernatur aut doloribus veritatis.</p>
+                        <div>
+                            <img src="./assets/icons/star.svg" alt="Star icon">
+                            <img src="./assets/icons/eye.svg" alt="Eye icon">
+                            <img src="./assets/icons/split.svg" alt="Split icon">
+                        </div>
+                    </div>
+                    <div class="card frosted">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequuntur mollitia
+                            laboriosam tenetur corrupti, accusantium temporibus ex quos natus vitae quia maxime! Quas ab
+                            ea excepturi aspernatur aut doloribus veritatis.</p>
+                        <div>
+                            <img src="./assets/icons/star.svg" alt="Star icon">
+                            <img src="./assets/icons/eye.svg" alt="Eye icon">
+                            <img src="./assets/icons/split.svg" alt="Split icon">
+                        </div>
+                    </div>
+                    <div class="card frosted">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequuntur mollitia
+                            laboriosam tenetur corrupti, accusantium temporibus ex quos natus vitae quia maxime! Quas ab
+                            ea excepturi aspernatur aut doloribus veritatis.</p>
+                        <div>
+                            <img src="./assets/icons/star.svg" alt="Star icon">
+                            <img src="./assets/icons/eye.svg" alt="Eye icon">
+                            <img src="./assets/icons/split.svg" alt="Split icon">
+                        </div>
+                    </div>
+                    <div class="card frosted">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequuntur mollitia
+                            laboriosam tenetur corrupti, accusantium temporibus ex quos natus vitae quia maxime! Quas ab
+                            ea excepturi aspernatur aut doloribus veritatis.</p>
+                        <div>
+                            <img src="./assets/icons/star.svg" alt="Star icon">
+                            <img src="./assets/icons/eye.svg" alt="Eye icon">
+                            <img src="./assets/icons/split.svg" alt="Split icon">
+                        </div>
+                    </div>
+                    <div class="card frosted">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequuntur mollitia
+                            laboriosam tenetur corrupti, accusantium temporibus ex quos natus vitae quia maxime! Quas ab
+                            ea excepturi aspernatur aut doloribus veritatis.</p>
+                        <div>
+                            <img src="./assets/icons/star.svg" alt="Star icon">
+                            <img src="./assets/icons/eye.svg" alt="Eye icon">
+                            <img src="./assets/icons/split.svg" alt="Split icon">
+                        </div>
+                    </div>
+                    <div class="card frosted">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequuntur mollitia
+                            laboriosam tenetur corrupti, accusantium temporibus ex quos natus vitae quia maxime! Quas ab
+                            ea excepturi aspernatur aut doloribus veritatis.</p>
+                        <div>
+                            <img src="./assets/icons/star.svg" alt="Star icon">
+                            <img src="./assets/icons/eye.svg" alt="Eye icon">
+                            <img src="./assets/icons/split.svg" alt="Split icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <h2>Announcements</h2>
+                <div class="announcements-container frosted">
+                    <div class="announcement">
+                        <h4>Site Maintenance</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim inventore blanditiis ducimus
+                            quas
+                            ipsam, voluptatem culpa quaerat consequatur et saepe error molestiae, cum iste non quia, ea
+                            temporibus? Fuga, debitis.</p>
+                    </div>
+                    <hr>
+                    <div class="announcement">
+                        <h4>Community Share Day</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim inventore blanditiis ducimus
+                            quas
+                            ipsam, voluptatem culpa quaerat consequatur et saepe error molestiae, cum iste non quia, ea
+                            temporibus? Fuga, debitis.</p>
+                    </div>
+                    <hr>
+                    <div class="announcement">
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim inventore blanditiis ducimus
+                            quas
+                            ipsam, voluptatem culpa quaerat consequatur et saepe error molestiae, cum iste non quia, ea
+                            temporibus? Fuga, debitis.</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="trending">
+                <h2>Trending</h2>
+                <div class="trending-container frosted">
+                    <div class="trending-item">
+                        <img src="./assets/icons/circle-user-round.svg" alt="User icon">
+                        <div>
+                            <div>@tegan</div>
+                            <div>World Peace Builder</div>
+                        </div>
+                    </div>
+                    <div class="trending-item">
+                        <img src="./assets/icons/circle-user-round.svg" alt="User icon">
+                        <div>
+                            <div>@john</div>
+                            <div>Super Cool Project</div>
+                        </div>
+                    </div>
+                    <div class="trending-item">
+                        <img src="./assets/icons/circle-user-round.svg" alt="User icon">
+                        <div>
+                            <div>@kendall</div>
+                            <div>Life changing app</div>
+                        </div>
+                    </div>
+                    <div class="trending-item">
+                        <img src="./assets/icons/circle-user-round.svg" alt="User icon">
+                        <div>
+                            <div>@john</div>
+                            <div>No Traffic Maker</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
